# rag-project

./: .gitignore  README.md  db.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py  ticket_service.py  vercel.json
backend/: .env.example  README.md  chat_service.py  main.py  models.py  pyproject.toml  ragie_service.py  requirements.txt  routes.py  ticket_service.py  vercel.json
backend/api/: index.py
backend/test/: test-chat.sh  test-chatgpt.sh  test-documents.sh  test-hello-world.txt  test-ragie.sh  test-ticketing.sh  test-todo-list.sh  test_chat.py  test_ragie.py
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/app/: page.tsx
frontend/src/utils/: api.ts
sql/: create_tables.sql
test/: test-documents.sh
